# ncs_vurn

./: .gitignore  README.md  docker-compose.yml
fastapi/: .dockerignore  Dockerfile  config.py  logging_config.yml  mypy.ini  pyproject.toml  start.sh
fastapi/migrations/: env.py
fastapi/migrations/versions/: 3a41301444b5_add_questions.py  e7a09df7646a_initial_migration.py
fastapi/src/: __init__.py  app.py  auto_config.py  base_classes.py  containers.py  db.py  exceptions.py  main.py  runserver.py  util.py
fastapi/src/modules/questions/: crud.py  models.py  routes.py  schema.py  service.py
fastapi/src/modules/security/: auth_schema.py  dependencies.py  routes.py  schema.py  service.py  util.py
fastapi/src/modules/users/: crud.py  models.py  routes.py  schema.py  service.py
sveltekit/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js
sveltekit/src/: styles.css
sveltekit/src/lib/api/: client.ts  questions.ts  security.ts  users.ts
sveltekit/src/lib/components/: Footer.svelte  Login.svelte  Navbar.svelte  Register.svelte  Transfer.svelte  UserInformation.svelte
sveltekit/src/lib/stores/: token.ts
sveltekit/src/lib/types/: ComicsInfo.ts  Questions.ts  Tokens.ts  Users.ts
sveltekit/src/routes/: +layout.svelte  +page.svelte  __error.svelte  index.svelte
sveltekit/src/routes/account/: +page.svelte  +page.ts
sveltekit/src/routes/login/: +page.svelte
sveltekit/src/routes/questions/: +page.svelte  +page.ts
sveltekit/src/routes/test/: +page.svelte  +page.ts
